[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-schedule-scraper"
version = "0.1.0"
description = "A script to scrape and store daily schedule information"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Mount Sinai"}
]
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
]

[tool.setuptools]
packages = [] 
